k8s/apps/srvc-home-timeline/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srvc-home-timeline
  namespace: apps
  labels:
    app: srvc-home-timeline
spec:
  replicas: 1 # Number of replicas
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: srvc-home-timeline
  template:
    metadata:
      labels:
        app: srvc-home-timeline
    spec:
      imagePullSecrets:
        - name: pull-secret
      containers:
        - name: srvc-home-timeline
          image: registry.cri.epita.fr/ing/majeures/tc/info/student/2026/2025-epitweet-tinyx-02/srvc-home-timeline:v1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
